--- a/src/components/console/history/components/historyItem/historyItem.scss
+++ b/src/components/console/history/components/historyItem/historyItem.scss
@@ -11,7 +11,8 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-between;
+    min-width: 137px;
     cursor: pointer;
   }
 
@@ -67,11 +68,30 @@
 
   &__dropped-container {
     position: absolute;
-    right: -27px;
+    right: -28px;
+    top: 0px;
     margin-top: 3px;
 
     &_first {
       right: -130px;
     }
+  }
+
+  &__copy-info {
+    position: absolute;
+    padding: 0px 5px;
+    box-sizing: border-box;
+    font-size: 12px;
+    line-height: 20px;
+    color: #0d0d0d;
+    width: 90px;
+    height: 20px;
+    background-color: #f6f6f6;
+    border-radius: 5px;
+    top: -26px;
+    left: 25px;
+    transition: height 2s linear;
+    pointer-events: none;
+    opacity: 0;
   }
 }
