--- a/src/components/console/history/components/clearButton/clearButton.scss
+++ b/src/components/console/history/components/clearButton/clearButton.scss
@@ -10,6 +10,7 @@
     border-left: 1px solid #c4c4c4;
     cursor: pointer;
     position: relative;
+    z-index: 200;
 
     &:focus {
       outline-color: #45A5FF;
